--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-froala-wysiwyg": "^2.8.4",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "typed.js": "^2.0.8",
