--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngx-progressbar/core": "^5.0.1",
     "angular-froala-wysiwyg": "^2.8.4",
     "core-js": "^2.5.4",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.22.2",
+    "ngx-moment": "^3.1.0",
     "rxjs": "^6.0.0",
     "typed.js": "^2.0.8",
     "zone.js": "^0.8.26"
